--- a/artwork.html
+++ b/artwork.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>MyArtwork</title>
     <link rel="stylesheet" href="cssdesign.css">
-    <link rel="shortcut icon" href="images/brush.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="brush.ico" type="x-icon">
 
 </head>
 <body>
@@ -42,26 +42,26 @@
         <h1 class="h2">Here are some pieces of my heART ❤️</h1>
 
 
-        <img class="img2" height="300" width="300" src="images\ganpati.jpg">
+        <img class="img2" height="300" width="300" src="ganpati.jpg">
 
-        <img class="img2" height="300" width="300" src="images\MAULI.jpg">
-        <img class="img2" height="300" width="300" src="images\yashodha.jpg">
-        <img class="img2" height="300" width="300" src="images\gopal.jpg">
+        <img class="img2" height="300" width="300" src="MAULI.jpg">
+        <img class="img2" height="300" width="300" src="yashodha.jpg">
+        <img class="img2" height="300" width="300" src="gopal.jpg">
 
-        <img class="img2" height="300" width="300" src="images\krishna.jpg">
-        <img class="img2" height="300" width="300" src="images\sant.jpg">
-        <img class="img2" height="300" width="300" src="images\mickey.jpg">
+        <img class="img2" height="300" width="300" src="krishna.jpg">
+        <img class="img2" height="300" width="300" src="sant.jpg">
+        <img class="img2" height="300" width="300" src="mickey.jpg">
 
-        <img class="img2" height="300" width="300" src="images\bunny.jpg">
+        <img class="img2" height="300" width="300" src="bunny.jpg">
 
-        <img class="img2" height="300" width="300" src="images\dog.jpg">
+        <img class="img2" height="300" width="300" src="dog.jpg">
 
-        <img class="img2" height="300" width="300" src="images\doll.jpg">
-        <img class="img2" height="300" width="300" src="images\girl.jpg">
-        <img class="img2" height="300" width="300" src="images\irritate.jpg">
-        <img class="img2" height="300" width="300" src="images\pikachu.jpg">
-        <img class="img2" height="300" width="300" src="images\raina.jpg">
-        <img class="img2" height="300" width="300" src="images\tom.jpg">
+        <img class="img2" height="300" width="300" src="doll.jpg">
+        <img class="img2" height="300" width="300" src="girl.jpg">
+        <img class="img2" height="300" width="300" src="irritate.jpg">
+        <img class="img2" height="300" width="300" src="pikachu.jpg">
+        <img class="img2" height="300" width="300" src="raina.jpg">
+        <img class="img2" height="300" width="300" src="tom.jpg">
         <hr />
     </div>
 </body>
