--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Platform for artists to showcase their talents">
 	<title>PranitaBhadange</title>
 	<link rel="stylesheet" href="cssdesign.css">
-	<link rel="shortcut icon" href="images/brush.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="brush.ico" type="image/x-icon">
 
 
 
@@ -20,13 +20,13 @@
 </head>
 <body>
 	<div class="top1">
-		<img class="img1" height="375" width="500" src="images\art1.png" alt=" image of and art name">
+		<img class="img1" height="375" width="500" src="art1.png" alt=" image of and art name">
 	</div>
 	<div class="middle1">
 
-		<a href="artwork.html"><img class="img1" height="300" width="300" src="images\artwork.png"></a>
-		<a href="resume.html"><img class="img1" height="300" width="300" src="images\aboutme.png"></a>
-		<a href="contactme.html"><img class="img1" height="300" width="300" src="images\contactme.png"></a>
+		<a href="artwork.html"><img class="img1" height="300" width="300" src="artwork.png"></a>
+		<a href="resume.html"><img class="img1" height="300" width="300" src="aboutme.png"></a>
+		<a href="contactme.html"><img class="img1" height="300" width="300" src="contactme.png"></a>
 
 
 	</div>
